--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8094
 # Database
 #spring.datasource.url=jdbc:mysql://107.180.95.11:3306/gfpl_store_demo?useSSL=false
 
-spring.datasource.url=jdbc:mysql://107.180.95.11:3306/gfpl_store?useSSL=false
+spring.datasource.url=jdbc:mysql://107.180.95.11:3306/gfpl_shendre_store?useSSL=false
 spring.datasource.username=gfpl_store
 spring.datasource.password=store@123456789
 spring.datasource.tomcat.max-wait=20000
